# cmake_example

./: README.md
ex1_hello_world/: CMakeLists.txt  foo.cpp
ex2_find_package/: CMakeLists.txt  README.md  hello.c
